fixing overlap of text and box

--- a/Css/styles.css
+++ b/Css/styles.css
@@ -79,6 +79,7 @@ input{
 input[type="email"]{
   color: #4ecdc4;
   font-size: 18px;
+  padding: 5px 5px 7.5px 5px;
 }
 input[type="submit"]{
   background-color: #ffcce4;
